// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-progress applies css custom props according to props applies valuemax prop 1`] = `
<ld-progress aria-valuemax="200" aria-valuemin="0" class="ld-progress ld-progress--indeterminate" role="progressbar" style="--ld-progress-valuemax: 200; --ld-progress-valuemin: 0;">
  <mock:shadow-root></mock:shadow-root>
</ld-progress>
`;

exports[`ld-progress applies css custom props according to props applies valuemin prop 1`] = `
<ld-progress aria-valuemax="100" aria-valuemin="10" class="ld-progress ld-progress--indeterminate" role="progressbar" style="--ld-progress-valuemax: 100; --ld-progress-valuemin: 10;">
  <mock:shadow-root></mock:shadow-root>
</ld-progress>
`;

exports[`ld-progress applies css custom props according to props applies valuenow prop 1`] = `
<ld-progress aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" class="ld-progress" role="progressbar" style="--ld-progress-valuemax: 100; --ld-progress-valuemin: 0; --ld-progress-valuenow: 25;">
  <mock:shadow-root></mock:shadow-root>
</ld-progress>
`;

exports[`ld-progress renders 1`] = `
<ld-progress aria-valuemax="100" aria-valuemin="0" aria-valuenow="25" class="ld-progress" role="progressbar" style="--ld-progress-valuemax: 100; --ld-progress-valuemin: 0; --ld-progress-valuenow: 25;">
  <mock:shadow-root></mock:shadow-root>
</ld-progress>
`;
